Refactored for Java 1.9
Removed sun code for generating certs and switched to bouncy castle.